--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   "version": "0.0.1",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-qunit": "^0.5.2",
+    "grunt-contrib-uglify": "^0.8.0",
     "grunt-jscs-checker": "^0.8.1",
-    "grunt-jslint": "^1.1.12",
     "grunt-remove-logging": "^0.2.0"
   },
   "private": false
