--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-qunit": "^0.5.2",
     "grunt-contrib-uglify": "^0.8.0",
-    "grunt-jscs-checker": "^0.8.1",
+    "grunt-jscs": "^1.5.0",
+    "grunt-jsdoc": "^0.6.2",
     "grunt-remove-logging": "^0.2.0"
   },
   "private": false
