--- a/.jshintrc
+++ b/.jshintrc
@@ -1,21 +1,30 @@
 {
-    "browser": true,
-    "curly": true,
-    "eqeqeq": true,
-    "eqnull": true,
-    "esnext": true,
-    "es5": true,
-    "immed": true,
-    "newcap": true,
-    "strict": true,
-    "freeze": true,
-    "funcscope": true,
-    "futurehostile": true,
-    "latedef": true,
-    "noarg": true,
-    "node": true,
-    "nonew": true,
-    "undef": true,
-    "unused": true,
-    "worker": true
+  "browser": true,
+  "curly": true,
+  "eqeqeq": true,
+  "eqnull": true,
+  "esnext": true,
+  "immed": true,
+  "newcap": true,
+  "strict": true,
+  "freeze": true,
+  "funcscope": true,
+  "futurehostile": true,
+  "latedef": true,
+  "noarg": true,
+  "node": true,
+  "nonew": true,
+  "undef": true,
+  //"unused": true,
+  "worker": true,
+  "globals": {
+    "ajax": true,
+    "ERP": true,
+    "ct": true,
+    "_": true,
+    "Mustache": true,
+    "GLOBALLOOP": true,
+    "modalBox": true,
+    "l18n": true
+  }
 }
