--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "fieldValidator",
-  "description": "uses HTML5 field element attributes to validate input",
+  "description": "uses HTML5 field element attributes to validate field input. Allows to have more flexible validation all the while keeping your markup valid",
   "author": {
     "name": "Sebastien Daniel",
-    "email": "sebastien.daniel@sebweb.ca"
+    "email": "info@sebastiendaniel.ca"
   },
-  "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SebastienDaniel/fieldValidator.git"
+  },
+  "version": "0.1.0",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-jasmine": "^0.8.2",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-qunit": "^0.5.2",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-jscs": "^1.5.0",
     "grunt-jsdoc": "^0.6.2",
