--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "fieldvalidator",
-    "description": "Use HTML5 field element attributes to validate field input dynamically. Allows for flexible validation management without changing the DOM",
-    "version": "1.0.5",
+    "description": "Use HTML5 field element attributes to validate field input dynamically. Allows for flexible validation management without relying on browser implementations",
+    "version": "1.1.0",
     "homepage": "https://github.com/SebastienDaniel/fieldValidator",
     "keywords": [
         "input",
